<resources>
    <string name="app_name">Lifeline Blood</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lifeline Blood</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register as new user</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect bb</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="blood_gr">Blood Group</string>
    <string name="mobileNO">Mobile Number</string>
    <string name="name">Name</string>
    <string name="action_reset_pass">Reset Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="blank_field">Can\'t be blank</string>
    <string name="mobNum_size">Can\'t be less than 10 digit</string>
    <string name="action_request">Generate Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_back">Back</string>
    <string name="my_account">My Account</string>
    <string name="user_picture">Display Picture of user</string>
    <string name="messages">Messages</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="need_blood">Need Blood</string>
    <string name="error_splash">Unknown Error Splash Screen</string>
    <string name="logo_image">Logo Image</string>
    <string name="blood_request">Your Requests</string>
    <string name="your_donations">Your Donations</string>
    <string name="log_out">Log Out</string>
    <string name="location">Location</string>
    <string name="hospital">Hospital</string>
    <string name="age">Age</string>
    <string name="already_requested">You have already placed a request</string>
    <string name="request_placed">You request has been placed</string>
    <string name="edit_img">Edit Image</string>
    <string name="address">Address</string>

    <string
        name="select">Select Blood Group</string>
    <string
        name="bga">A+</string>
    <string
        name="bgb">A-</string>
    <string
        name="bgc">B+</string>
    <string
        name="bgd">B-</string>
    <string
        name="bge">AB+</string>
    <string
        name="bgf">AB-</string>
    <string
        name="bgg">O+</string>
    <string
        name="bgh">O-</string>


    <string-array
        name="blood_group_array">
        <item>@string/select</item>
        <item>@string/bga</item>
        <item>@string/bgb</item>
        <item>@string/bgc</item>
        <item>@string/bgd</item>
        <item>@string/bge</item>
        <item>@string/bgf</item>
        <item>@string/bgg</item>
        <item>@string/bgh</item>
    </string-array>
</resources>
