<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/help" />


    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_menu_message"
        android:title="@string/messages" />

    <item
        android:id="@+id/nav_home"
        android:visible="false"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home" />


    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_menu_account"
        android:title="Account" />
</group>


</menu>